--- a/package.json
+++ b/package.json
@@ -49,16 +49,18 @@
     "chart.js": "^2.9.3",
     "cordova-android": "^9.0.0",
     "cordova-android-support-gradle-release": "^3.0.1",
-    "cordova-ios": "^6.1.0",
+    "cordova-ios": "^5.1.1",
     "cordova-plugin-3dtouch": "^1.3.8",
     "cordova-plugin-android-permissions": "^1.0.2",
     "cordova-plugin-androidx": "^2.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-app-version": "^0.1.9",
     "cordova-plugin-appminimize": "^1.0.1",
+    "cordova-plugin-apprate": "^1.7.0",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-device": "^2.0.3",
+    "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-enable-multidex": "^0.2.0",
     "cordova-plugin-file": "^6.0.2",
     "cordova-plugin-filechooser": "^1.2.0",
@@ -70,6 +72,7 @@
     "cordova-plugin-inappbrowser": "^4.0.0",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
+    "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
     "cordova-plugin-telerik-imagepicker": "^2.3.3",
@@ -167,7 +170,10 @@
         "ANDROID_GSON_VERSION": "2.8.6"
       },
       "cordova-plugin-datepicker": {},
-      "cordova-plugin-geolocation": {}
+      "cordova-plugin-geolocation": {},
+      "cordova-plugin-apprate": {
+        "PLAY_CORE_VERSION": "1.+"
+      }
     },
     "platforms": [
       "android",
