--- a/package.json
+++ b/package.json
@@ -21,37 +21,37 @@
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
-    "@ionic-native/android-permissions": "^5.23.0",
-    "@ionic-native/app-minimize": "^5.23.0",
-    "@ionic-native/app-version": "^5.23.0",
-    "@ionic-native/camera": "^5.23.0",
-    "@ionic-native/core": "^5.23.0",
-    "@ionic-native/date-picker": "^5.28.0",
-    "@ionic-native/file": "^5.23.0",
-    "@ionic-native/file-chooser": "^5.23.0",
-    "@ionic-native/file-path": "^5.23.0",
-    "@ionic-native/file-picker": "^5.23.0",
-    "@ionic-native/firebase-x": "^5.23.0",
+    "@ionic-native/android-permissions": "^5.29.0",
+    "@ionic-native/app-minimize": "^5.29.0",
+    "@ionic-native/app-version": "^5.29.0",
+    "@ionic-native/camera": "^5.29.0",
+    "@ionic-native/core": "^5.29.0",
+    "@ionic-native/date-picker": "^5.29.0",
+    "@ionic-native/file": "^5.29.0",
+    "@ionic-native/file-chooser": "^5.29.0",
+    "@ionic-native/file-path": "^5.29.0",
+    "@ionic-native/file-picker": "^5.29.0",
+    "@ionic-native/firebase-x": "^5.29.0",
     "@ionic-native/geolocation": "^5.29.0",
-    "@ionic-native/globalization": "^5.23.0",
-    "@ionic-native/image-picker": "^5.23.0",
-    "@ionic-native/in-app-browser": "^5.23.0",
-    "@ionic-native/keyboard": "^5.23.0",
-    "@ionic-native/social-sharing": "^5.23.0",
-    "@ionic-native/splash-screen": "^5.23.0",
-    "@ionic-native/status-bar": "^5.23.0",
-    "@ionic-native/three-dee-touch": "^5.23.0",
-    "@ionic/angular": "^5.3.0",
-    "@ionic/cli": "^6.3.0",
-    "@ionic/storage": "^2.2.0",
+    "@ionic-native/globalization": "^5.29.0",
+    "@ionic-native/image-picker": "^5.29.0",
+    "@ionic-native/in-app-browser": "^5.29.0",
+    "@ionic-native/keyboard": "^5.29.0",
+    "@ionic-native/social-sharing": "^5.29.0",
+    "@ionic-native/splash-screen": "^5.29.0",
+    "@ionic-native/status-bar": "^5.29.0",
+    "@ionic-native/three-dee-touch": "^5.29.0",
+    "@ionic/angular": "^5.4.1",
+    "@ionic/cli": "^6.12.1",
+    "@ionic/storage": "^2.3.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "chart.js": "^2.9.3",
+    "chart.js": "^2.9.4",
     "cordova-android": "^9.0.0",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-ios": "^5.1.1",
     "cordova-plugin-3dtouch": "^1.3.8",
-    "cordova-plugin-android-permissions": "^1.0.2",
+    "cordova-plugin-android-permissions": "1.1.0",
     "cordova-plugin-androidx": "^2.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.1",
     "cordova-plugin-app-version": "^0.1.9",
@@ -75,17 +75,17 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-telerik-imagepicker": "^2.3.3",
+    "cordova-plugin-telerik-imagepicker": "2.3.5",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^3.4.1",
     "core-js": "^2.6.11",
     "es6-promise-plugin": "^4.2.2",
     "ionic": "^5.4.16",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "ngx-stars": "^1.4.3",
-    "rxjs": "^6.6.0",
-    "tslib": "^1.13.0",
+    "rxjs": "^6.6.3",
+    "tslib": "^1.14.1",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -97,23 +97,23 @@
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
-    "@ionic/angular-toolkit": "^2.3.0",
-    "@types/jasmine": "^3.5.11",
+    "@ionic/angular-toolkit": "^2.3.3",
+    "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.8",
-    "@types/node": "^12.12.53",
+    "@types/node": "^12.19.3",
     "elliptic": ">=6.5.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
-    "karma": "^5.1.0",
+    "karma": "^5.2.3",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.0.6",
     "karma-jasmine": "~3.1.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "^7.0.0",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.7.2",
     "stylelint-config-standard": "^20.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.8.3"
   },
   "description": "An Ionic project",
@@ -127,21 +127,20 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-file": {},
-      "cordova-plugin-telerik-imagepicker": {
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": " "
-      },
       "cordova-plugin-camera": {
         "ANDROID_SUPPORT_V4_VERSION": "27.+"
       },
-      "cordova-plugin-android-permissions": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-filechooser": {},
       "cordova-plugin-filepath": {},
       "cordova-plugin-filepicker": {},
       "cordova-plugin-x-socialsharing": {
         "ANDROID_SUPPORT_V4_VERSION": "24.1.1+",
-        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
-        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "The app needs photo library access, so that you can choose from already taken pictures from coffee beans, coffee bags, your own coffee brews etc. This pictures are stored inside the app.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "The app needs photo library access, so that you can choose from already taken pictures from coffee beans, coffee bags, your own coffee brews etc. This pictures are stored inside the app."
+      },
+      "cordova-plugin-telerik-imagepicker": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "The app needs photo library access, so that you can choose from already taken pictures from coffee beans, coffee bags, your own coffee brews etc. This pictures are stored inside the app."
       },
       "cordova-plugin-appminimize": {},
       "cordova-android-support-gradle-release": {
@@ -173,7 +172,8 @@
       "cordova-plugin-geolocation": {},
       "cordova-plugin-apprate": {
         "PLAY_CORE_VERSION": "1.+"
-      }
+      },
+      "cordova-plugin-android-permissions": {}
     },
     "platforms": [
       "android",
