--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
     "chart.js": "^2.9.4",
-    "cordova-android": "^9.0.0",
     "cordova-android-support-gradle-release": "^3.0.1",
     "cordova-plugin-3dtouch": "^1.3.8",
     "cordova-plugin-android-permissions": "1.1.0",
@@ -74,7 +73,6 @@
     "cordova-plugin-nativestorage": "^2.3.2",
     "cordova-plugin-splashscreen": "^5.0.4",
     "cordova-plugin-statusbar": "^2.4.3",
-    "cordova-plugin-telerik-imagepicker": "2.3.5",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-sqlite-storage": "^3.4.1",
@@ -100,7 +98,9 @@
     "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^12.19.3",
+    "cordova-android": "^9.0.0",
     "cordova-ios": "^6.1.1",
+    "cordova-plugin-telerik-imagepicker": "^2.3.3",
     "elliptic": ">=6.5.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "^5.0.2",
@@ -177,8 +177,8 @@
       "cordova-plugin-android-permissions": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
